Memcache made configurable, recentmach widget created. readme updated

--- a/views/index.html
+++ b/views/index.html
@@ -6,13 +6,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{{card.title}}</title>
+  <title>Recent Matches | Roanuz Cricket API</title>
   <meta name="description" content="" />
   <meta name="keywords" content="" />
 
 {% endblock %}
 
 {% block content %}
-  <h2>Welcome To Roanuz CricketAPI Sample Code</h2>
+  <div class="rca-container">
+    <div class="rca-row">
+      <div class="rca-column-12">
+        <div class="rca-blog-image">
+          <h2 style="padding: 20px 0; font-weight: 300; color: #000;">
+            Data From Recent Matches API - for more details <a href="https://www.cricketapi.com/docs/recent_match_api/" target="_blank"> Click here.</a>
+          </h2>
+        </div>
+      </div>
+    </div>
+    <div class="rca-row">
+      <div class="rca-column-12">
+        <!--Widget Inner -->
+        <div class="rca-menu-scroll rca-left-border">
+          <ul class="rca-season-list">
+            {% for card in cards%}
+            <li>
+              <a href="/match/{{card.key}}/">
+                {{card.short_name}}
+              </a>
+            </li>
+            {%endfor%}
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
