--- a/views/base_template.html
+++ b/views/base_template.html
@@ -18,7 +18,7 @@
       <![endif]-->
     {%endif%}
   </head>
-  <body>
+  <body style="background-color: #e6e6e6;">
     <!-- You write code for this content block in another file -->
 
     <section class="body-content">
@@ -29,7 +29,7 @@
       window.onload = function() {
         setTimeout(function(){
           console.log('reload'); // will reload the page every 5 seconds
-          location.reload();
+          // location.reload();
         },5000)
       };
     </script>
